--- a/main.styl
+++ b/main.styl
@@ -3,8 +3,14 @@
 
 body, html
   margin 0
-  background blue
+  background black
   font-family 'Brandon Light'
   color white
   font-size 1.2em
   cursor none
+
+#game-canvas
+  width 100%
+  height 100%
+  background blue
+  overflow hidden
