--- a/main.styl
+++ b/main.styl
@@ -7,9 +7,11 @@ body, html
   font-family 'Brandon Light'
   color white
   font-size 1.2em
+  overflow hidden
   cursor none
 
 #game-canvas
   width 100%
   height 100%
+  position fixed
   overflow hidden
