Added sound, improved collisions

--- a/main.jade
+++ b/main.jade
@@ -11,3 +11,6 @@ template(name='layout')
 
 template(name='main')
   div#game-canvas
+  
+template(name='loading')
+  div#loadingMessage Loading, please wait...
